fix: fixed fonts on safari mobile? maybe?

--- a/crates/site-app/style/fonts.css
+++ b/crates/site-app/style/fonts.css
@@ -3,7 +3,10 @@
 	font-display: swap;
 	font-weight: 100 900;
 	font-style: normal;
-	src: url('/fonts/IosevkaCustom-Regular.ttf') url('/fonts/IosevkaCustom-Bold.ttf') url('/fonts/IosevkaCustom-Italic.ttf') format('truetype');
+	src:
+		url('/fonts/IosevkaCustom-Regular.ttf') format('truetype')
+		url('/fonts/IosevkaCustom-Bold.ttf') format('truetype')
+		url('/fonts/IosevkaCustom-Italic.ttf') format('truetype');
 }
 
 @font-face {
